--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "install-deps": "cd \"dist/functions\" && npm i"
   },
   "dependencies": {
-    "firebase-admin": "^6.3.0",
-    "firebase-functions": "^2.1.0",
-    "next": "^7.0.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "firebase-admin": "6.4.0",
+    "firebase-functions": "2.1.0",
+    "next": "7.0.2",
+    "react": "16.6.3",
+    "react-dom": "16.6.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "cpx": "^1.5.0",
-    "cross-env": "^5.2.0",
-    "firebase-tools": "^6.1.0",
-    "rimraf": "^2.6.0"
+    "@babel/cli": "7.2.0",
+    "cpx": "1.5.0",
+    "cross-env": "5.2.0",
+    "firebase-tools": "6.1.2",
+    "rimraf": "2.6.2"
   }
 }
