--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+### Project specific
 dist/
-node_modules/
-
-# Firebase cache
 .firebase/
+
+### Node ###
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+jspm_packages/
