--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
     "cpx": "1.5.0",
     "cross-env": "5.2.0",
     "firebase-tools": "6.2.2",
