--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   },
   "scripts": {
     "dev": "next \"src/app/\"",
-    "preserve": "npm run build-public && npm run build-funcs && npm run build-app && npm run copy-deps && npm run install-deps",
-    "serve": "cross-env NODE_ENV=production firebase serve",
-    "predeploy": "npm run build-public && npm run build-funcs && npm run build-app && npm run copy-deps",
+    "preserve": "yarn run build-public && yarn run build-funcs && yarn run build-app && yarn run copy-deps && yarn run install-deps",
+    "serve": "cross-env NODE_ENV=production firebase serve --only functions,hosting",
+    "predeploy": "yarn run build-public && yarn run build-funcs && yarn run build-app && yarn run copy-deps",
     "deploy": "firebase deploy",
     "clean": "rimraf \"dist/functions/**\" && rimraf \"dist/public\"",
     "build-public": "cpx \"src/public/**/*.*\" \"dist/public\" -C",
     "build-funcs": "babel \"src/functions\" --out-dir \"dist/functions\"",
-    "build-app": "next build \"src/app/\"",
-    "copy-deps": "cpx \"*{package.json,package-lock.json,yarn.lock}\" \"dist/functions\" -C",
-    "install-deps": "cd \"dist/functions\" && npm i"
+    "build-app": "NODE_ENV=production next build \"src/app/\"",
+    "copy-deps": "cpx \"*{package.json,yarn.lock}\" \"dist/functions\" -C",
+    "install-deps": "cd \"dist/functions\" && yarn install"
   },
   "dependencies": {
     "firebase-admin": "6.5.0",
