--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "rimraf \"dist/functions/**\" && rimraf \"dist/public\"",
     "build-public": "cpx \"src/public/**/*.*\" \"dist/public\" -C",
     "build-funcs": "babel \"src/functions\" --out-dir \"dist/functions\"",
-    "build-app": "NODE_ENV=production next build \"src/app/\"",
+    "build-app": "cross-env NODE_ENV=production next build \"src/app/\"",
     "copy-deps": "cpx \"*{package.json,yarn.lock}\" \"dist/functions\" -C",
     "install-deps": "cd \"dist/functions\" && yarn install"
   },
