--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/preset-env": "7.2.3",
     "cpx": "1.5.0",
     "cross-env": "5.2.0",
-    "firebase-tools": "6.2.2",
-    "rimraf": "2.6.3"
+    "rimraf": "2.6.3",
+    "webpack-pwa-manifest": "4.0.0"
   }
 }
