--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "build-funcs": "babel \"src/functions\" --out-dir \"dist/functions\"",
     "build-app": "cross-env NODE_ENV=production next build \"src/app/\"",
     "copy-deps": "cpx \"*{package.json,yarn.lock}\" \"dist/functions\" -C",
-    "install-deps": "cd \"dist/functions\" && yarn install"
+    "install-deps": "cd \"dist/functions\" && yarn install",
+    "analyze": "cross-env BUNDLE_ANALYZE=both NODE_ENV=production next build \"src/app/\"",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server NODE_ENV=production next build \"src/app/\"",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser NODE_ENV=production next build \"src/app/\""
   },
   "dependencies": {
     "firebase-admin": "6.5.0",
@@ -30,6 +33,7 @@
     "@babel/cli": "7.2.3",
     "@babel/core": "7.2.2",
     "@babel/preset-env": "7.2.3",
+    "@zeit/next-bundle-analyzer": "0.1.3-canary.1",
     "cpx": "1.5.0",
     "cross-env": "5.2.0",
     "rimraf": "2.6.3",
